<resources>
    <string name="app_name">Team Us Up</string>
    <string name="submit">Submit</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->

    <string name="facebook_app_id">675992037099670</string>
    <string name="fb_login_protocol_scheme">fb675992037099670</string>

    <string name="facebook_application_id" translatable="false">675992037099670</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb675992037099670</string>


    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="verified">Verified</string>
    <string name="games">Games</string>
    <string name="camera">Camera</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout">Logout</string>

    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="under_construction">Under Construction</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome back</string>
    <string name="loading_data">Loading data</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="not_implemented_yet">Not Implemented yet</string>
    <string name="open_camera">Open Camera</string>
    <string name="player_s_name">Player\'s Name</string>
    <string name="level">Level</string>
    <string name="beginner">Beginner</string>
    <string name="normal">Normal</string>
    <string name="professional">Professional</string>
    <string name="start">Start</string>
    <string name="random">Random</string>
    <string name="finish">Finish</string>
    <string name="undo">Undo</string>
    <string name="end">End</string>
    <string name="RED">RED</string>
    <string name="BLUE">BLUE</string>
    <string name="matches">Matches</string>
    <string name="points">Points</string>
    <string name="pause">Pause</string>
    <string name="player">Player</string>
    <string name="teams">Teams</string>
    <string name="game_table">Game Table</string>
    <string name="zero">0</string>
    <string name="new_game">New Game</string>
    <string name="my_location">My Location</string>
    <string name="my_games">My Games</string>
    <string name="total_games">Total Games</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="match_length">Match Length</string>
    <string name="players_total">Players (Total)</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="my_friends">My Friends</string>
    <string name="TODO">TODO</string>
    <string name="manual_typing">Manual Typing</string>
    <string name="convert_text">Convert Text</string>
    <string name="find_friends">Find Friends</string>
    <string name="change_language">Change Language</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="reset">Reset</string>
    <string name="zero_timer">00:00</string>
    <string name="colon">:</string>
    <string name="score">Score</string>
    <string name="fill_form">Fill Form</string>
    <string name="how_many_players_in_a_team">How many players in a team?</string>
    <string name="how_many_teams">How many teams?</string>
    <string name="how_long_is_a_game">How long is a game?</string>
    <string name="all_players">All Players</string>
    <string name="click_to_add_player_to_new_game">(click to add player to new game)</string>
    <string name="click_to_remove_player">(click to remove player)</string>
    <string name="players_has_been_chosen">player(s) has been chosen</string>
    <string name="game_players">Game Players</string>
    <string name="one">1</string>
    <string name="view">View</string>
    <string name="choose_players_level">Choose player\'s level</string>
    <string name="chosen_players">Chosen players</string>
    <string name="choose_nearby_explanation">Click on a player to add/remove to list\nThen click submit to add them to your friends</string>
    <string name="find_nearby_explanation">Click on a player to add/remove to list\nThen click submit to add them to your friends</string>
    <string name="enter_password">Enter Password</string>
    <string name="verify">Verify</string>
    <string name="empty_friends_list_explanation">List is empty\nClick plus button to add players</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
    <string name="this_field_is_required">This fields is required</string>
    <string name="proper_values">Proper values: [%d-%d]</string>
    <string name="two_teams_exact_amount">For 2 teams you must select exact amount of players</string>
    <string name="not_enough_players">You didn\'t choose enough players</string>
    <string name="too_many_players">You chose too many players</string>
    <string name="team_number">Team #</string>
    <string name="hello_new_user">Hello new user</string>
    <string name="exit_match_alert">Are you sure you want to exit match?\nData won\'t be saved</string>
    <string name="match_number">Match #%d</string>
    <string name="end_match_timer_running">Are you sure you want to end match?\nTimer is still running</string>
    <string name="pick_winning_team">Pick a winning team (match still counts as a draw)</string>
    <string name="match_ended_draw">The match ended in a draw</string>
    <string name="team">Team</string>
    <string name="won">won</string>
    <string name="scored">scored</string>
    <string name="time_is_over">Time is over!</string>
    <string name="last_minute">Last minute!</string>
    <string name="end_game_alert">Are you sure you want to end game?</string>
    <string name="choose_nearby_users">Choose nearby users</string>
    <string name="edit_username">Edit username</string>
    <string name="added">Added</string>
    <string name="new_players">new players</string>
    <string name="zero_users_chosen">0 users has been chosen</string>
    <string name="zero_players_added">0 players added</string>
    <string name="delete_alert">Are you sure you want to delete</string>
    <string name="starting_match_number">Starting match #</string>
    <string name="no_matches_played">No matches have been played</string>
    <string name="game_saved">Game saved successfully</string>
    <string name="no_one_has_scored_yet">No one has scored yet</string>
    <string name="last_goal_cancelled">\'s last goal cancelled</string>
    <string name="game_day_number">Game Day #</string>
    <string name="finding_friends_near_you">Finding friends near you</string>
    <string name="pts">Pts</string>
    <string name="goals">Goals</string>
    <string name="mp">MP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="ga">GA</string>
    <string name="gf">GF</string>
    <string name="gd">GD</string>
    <string name="my_profile">My Profile</string>
    <string name="invalid_username">Invalid username</string>
    <string name="goodbye">Goodbye</string>
    <string name="edit_level">Edit Level</string>
    <string name="friends_info_popup">
        This is your friends/players list
        \n
        \nIn order to start a new game, you need to have on the list here all the players who will participate in the game.
        \nYou can add players in several ways (click the PLUS button below):
        \n *   Manual typing one after the other
        \n *   Convert text to a list of players
        \n *   Find other users near you
        \n
        \nAfter adding enough players, you can go to the games page and start a new game…
    </string>
    <string name="games_info_popup">
        This is your games page.
        \nTo start a new game you will need to have all the participating players in your friends/players list.
        \nIf you have not added yet - Go to your \"Friends\" page and add players.
        \nThen come back to this page and click on "New Game".
        \n
        \nBesides, here you can see your games history.
        \nYou can scroll through the list of games by swiping right and left.
        \nTo view the points table - click on a specific game and you will be able to see at what location you played (map below).
    </string>
    <string name="new_game_form_info_popup">
        Fill out the form and select players to start a new game…
        \n
        \n *   How many players in a team? Select a number in the range 2-11.
        \n *   How many groups? Select a number in the 2-4 range.
        \n *   What is the length of the game (minutes)? Select a number in the range 1-99.
        \n
        \nIf you have selected 2 teams - the number of players must be exact (2 * the number of players you have selected).
        \n
        \nIf you have selected more than 2 teams - you do not have to choose the exact number of players.
        \nFor example: for 3 teams and 7 players in a team - you can choose between 15 and 21 players.
        \n15 - The minimum required to have two teams and one player spare for a third team.
        \n21 - The maximum required to divide them all into 3 teams.
    </string>
    <string name="random_info_popup">
        This is the middle page before starting each match.
        \n
        \nRANDOM - to random new teams.
        \nVIEW - to change players\' view (text / players\' cards).
        \nSTART - to start the next match.
        \nFINISH - to finish game and save data.
        \n
        \nAfter each match, the points table below will be updated.
        \nFirst place is the player with the most points.
        \nIf there is a tie in the number of points, the number of goals will be checked.
    </string>
    <string name="match_info_popup">
        This is the match page
        \n
        \nYou can start/pause/reset the timer for the match whenever you want.
        \n
        \nClick on a player card whenever he scores (the score will be updated accordingly).
        \nClick UNDO to cancel last goal
        \n
        \nClick FINISH to finish the match (even if timer is still running)
        \n
        \nThe winning team will continue to play in the next match as well.
        \n
        \nIf the result ends in a draw - you will have to choose a "winning" team that will continue to the next game (the game will still be considered a draw in terms of points).
    </string>
    <string name="empty_games_list_explanation">Games list is empty</string>
    <string name="location_permissions_denied_msg">Please allow location permission for app features</string>

</resources>