<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menuGames"
        android:icon="@drawable/icn_tournament"
        android:title="@string/games" />

    <item
        android:id="@+id/menuFriends"
        android:icon="@drawable/icn_friends"
        android:title="@string/friends" />

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/icn_user"
        android:title="@string/profile" />

    <item
        android:id="@+id/menuOthers"
        android:icon="@drawable/icn_user"
        android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/icn_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/icn_support"
                android:title="@string/support" />

            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/icn_information"
                android:title="@string/about_us" />

        </menu>

    </item>

</menu>