<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    >

    <LinearLayout
        android:id="@+id/dialog_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_TXTI_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_s_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_players_level"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
        <RadioGroup
            android:layout_marginTop="5dp"
            android:id="@+id/dialog_RG_level"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/dialog_RB_beginner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/beginner"/>
            <RadioButton
                android:id="@+id/dialog_RB_normal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/normal"/>
            <RadioButton
                android:id="@+id/dialog_RB_professional"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/professional"/>
        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_BTN_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/dialog_linear_layout"
        android:layout_alignTop="@id/dialog_IMG_image"
        android:layout_marginTop="36dp"
        android:backgroundTint="#2196F3"
        android:text="@string/camera"
        app:cornerRadius="50dp" />

    <ImageView
        android:id="@+id/dialog_IMG_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/dialog_linear_layout"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icn_user"
        android:layout_alignEnd="@id/dialog_linear_layout"
        android:contentDescription="@string/TODO"
        />

</RelativeLayout>