<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    >

    <RadioGroup
        android:layout_margin="8dp"
        android:id="@+id/dialog_RG_level"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/dialog_RB_beginner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/beginner"/>
        <RadioButton
            android:id="@+id/dialog_RB_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/normal"/>
        <RadioButton
            android:id="@+id/dialog_RB_professional"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/professional"/>
    </RadioGroup>

</RelativeLayout>