<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="26sp"
                    />

                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:id="@+id/settings_RG_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <RadioButton
                        android:id="@+id/settings_RB_english"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/english"/>
                    <RadioButton
                        android:id="@+id/settings_RB_hebrew"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hebrew"/>

                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settings_BTN_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/change"
                    app:cornerRadius="50dp" />


            </LinearLayout>






            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="#2196F3" />

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>