<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/match_TXT_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches"
                android:textSize="26sp"
                />

            <ImageButton
                android:id="@+id/match_BTN_info"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:background="#00FFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_info" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1414FF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BLUE"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/match_LIST_team1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>



        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF1414">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RED"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/match_LIST_team2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>


        </FrameLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/match_TXT_score1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#3F51B5"
                    android:textSize="26sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textSize="28sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/match_TXT_score2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#F43652"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/match_TXT_countDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/zero_timer"
                        android:textSize="36sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        >

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/match_BTN_startPause"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#2196F3"
                            android:text="@string/start"
                            app:cornerRadius="50dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/match_BTN_reset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:backgroundTint="#3F51B5"
                            android:text="@string/reset"
                            android:visibility="invisible"
                            app:cornerRadius="50dp"
                            tools:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/match_BTN_undo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF5722"
                        android:text="@string/undo"
                        app:cornerRadius="50dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/match_BTN_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#E91E1E"
                        android:text="@string/end"
                        app:cornerRadius="50dp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>