<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    android:id="@+id/player_MCV_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:elevation="8dp"
    app:cardElevation="5dp"
    android:backgroundTint="#8BC34A"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="2dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/player_IMG_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_user"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/TODO"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="4dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/player_LBL_name"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/player_LBL_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/professional"
                    android:textSize="11sp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/player_IMG_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_edit"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/TODO"
                />

            <ImageView
                android:id="@+id/player_IMG_delete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_bin"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/TODO"
                />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
